[package]
name = "forward_ref"
version = "1.0.0"
authors = ["jtempest"]
license = "MIT OR Apache-2.0"
description = "Rust's forward_ref_* macros for easier implementation of operator overloading."
homepage = "https://github.com/jtempest/forward_ref"
repository = "https://github.com/jtempest/forward_ref"
documentation = "https://docs.rs/forward_ref"
keywords = ["operators", "op", "ops", "overload", "overloading"]
categories = ["rust-patterns"]
include = ["Cargo.toml", "src/**/*.rs", "README.md", "COPYRIGHT", "LICENSE-APACHE", "LICENSE-MIT"]
edition = "2018"
